# applephrase

./: .gitignore  LICENSE  README.md  pyproject.toml
applephrase/: __init__.py  __main__.py  main.py
applephrase/wuggy/: __init__.py
applephrase/wuggy/generators/: wuggygenerator.py
applephrase/wuggy/plugins/language_data/orthographic_basque/: orthographic_basque.py
applephrase/wuggy/plugins/language_data/orthographic_dutch/: orthographic_dutch.py
applephrase/wuggy/plugins/language_data/orthographic_english/: orthographic_english.py
applephrase/wuggy/plugins/language_data/orthographic_estonian/: orthographic_estonian.py  orthographic_estonian.txt
applephrase/wuggy/plugins/language_data/orthographic_french/: orthographic_french.py
applephrase/wuggy/plugins/language_data/orthographic_german/: orthographic_german.py
applephrase/wuggy/plugins/language_data/orthographic_italian/: orthographic_italian.py
applephrase/wuggy/plugins/language_data/orthographic_polish/: orthographic_polish.py
applephrase/wuggy/plugins/language_data/orthographic_serbian_cyrillic/: orthographic_serbian_cyrillic.py
applephrase/wuggy/plugins/language_data/orthographic_serbian_latin/: orthographic_serbian_latin.py
applephrase/wuggy/plugins/language_data/orthographic_spanish/: orthographic_spanish.py
applephrase/wuggy/plugins/language_data/orthographic_vietnamese/: orthographic_vietnamese.py
